2005-02-01  Jeroen Frijters  <jeroen@frijters.net>

	* gnu/testlet/java/beans/Beans/instantiate_1.java:
	Fixed to use the correct class loader.

2005-01-31  Jeroen Frijters  <jeroen@frijters.net>

	* gnu/testlet/java/lang/Thread/security10.java:
	Added code to save and restore security manager.

2005-01-27  Michael Koch  <konqueror@gmx.de>

	* gnu/testlet/java/util/zip/ZipFile/newZipFile.java:
	Added new testcase for non-zip files.

2005-01-22  Robert Schuster <thebohemian@gmx.net>

	* gnu/testlet/java/beans/Introspector/getBeanInfoTestClass.java,
	gnu/testlet/java/beans/Introspector/getBeanInfo2_2TestClass.java,
	gnu/testlet/java/beans/Introspector/getBeanInfo.java,
	gnu/testlet/java/beans/Introspector/getBeanInfo2_2.java,
	gnu/testlet/java/beans/Introspector/getBeanInfo2_2.java:
	Fixed documentation and mauve tags.

2005-01-22  Robert Schuster <thebohemian@gmx.net>

	* gnu/testlet/java/beans/Beans.java: Fixed JDK Tag.

2005-01-20  Michael Koch  <konqueror@gmx.de>

	* gnu/testlet/javax/swing/text/PlainDocument/multipleLeafs.java:
	New testcases.

2005-01-20  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* gnu/testlet/java/text/DateFormatSymbols/Test:
	Removed the invalid locale test.
	
2005-01-18  Thomas Zander <zander@kde.org>

	* gnu/testlet/javax/swing/JFrame/SetSize.java: New (gui) test

2005-01-18  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/javax/swing/DefaultListModel/addElement.java,
	* gnu/testlet/javax/swing/DefaultListModel/add.java,
	* gnu/testlet/javax/swing/DefaultListModel/capacity.java,
	* gnu/testlet/javax/swing/DefaultListModel/clear.java,
	* gnu/testlet/javax/swing/DefaultListModel/constructor.java,
	* gnu/testlet/javax/swing/DefaultListModel/contains.java,
	* gnu/testlet/javax/swing/DefaultListModel/copyInto.java,
	* gnu/testlet/javax/swing/DefaultListModel/elementAt.java,
	* gnu/testlet/javax/swing/DefaultListModel/elements.java,
	* gnu/testlet/javax/swing/DefaultListModel/ensureCapacity.java,