@@ -1,3 +1,10 @@
+2005-02-02  Andrew John Hughes  <gnu_andrew@member.fsf.org>
+
+	* gnu/testlet/java/text/SimpleDateFormat/Localization.java:
+	Check that the class properly translates to and from localized
+	pattern strings, and that the constructor only handles
+	non-localized patterns.
+
 2005-02-01  Jeroen Frijters  <jeroen@frijters.net>
 
 	* gnu/testlet/java/beans/Beans/instantiate_1.java:
